iac/k8s/yaml/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: avalier-demo1
  labels:
    app: avalier-demo1
spec:
  selector:
    app: avalier-demo1
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 5000
    - name: https
      protocol: TCP
      port: 443
      targetPort: 5001
